# presilk

./: CHANGELOG.md  README.org  pack.toml  presilk.cabal  presilk.ipkg  wasm-codegen.ipkg
app/: Main.hs
src/: Presilk.hs  Presilkc.idr
src/Language/: Wasm.idr
src/Language/Presilk/: Lex.idr  Parse.idr  Syntax.idr
src/Language/Wasm/: Binary.idr  Syntax.idr
src/Language/Wasm/Syntax/: Internal.idr
src/Presilk/: Compile.hs  Macroexpand.hs  Parse.hs  Print.hs  Syntax.hs
tst/: test.ipkg
