cabal-version:      3.0
name:               presilk
version:            0.1.0.0
synopsis:           A playground for the design of Silk
description:
    Testing grounds for Silk, a language inspired by Haskell, Lisp, and C.
license:            GPL-3.0-only
license-file:       LICENSE
author:             crumbtoo
maintainer:         crumb@disroot.org
copyright:          hexathe6, Madeleine Sydney Slaga 2024
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.org
-- extra-source-files:

common warnings
    ghc-options: -Wall -fdefer-typed-holes
    default-extensions:
        LambdaCase
        PatternSynonyms
        PartialTypeSignatures
        DeriveTraversable
        TypeFamilies
        BlockArguments

library
    import:           warnings
    exposed-modules:  Presilk
                      Presilk.Parse
                      Presilk.Syntax
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0
                    , deriving-compat
                    , recursion-schemes
                    , text
                    , parsec
                    , s-cargot
    hs-source-dirs:   src
    default-language: GHC2021

executable presilk
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends: base ^>=4.19.1.0
                 , presilk
                 , haskeline
                 -- temp; just to bum their error pretty printing
                 , megaparsec
                 , text

    hs-source-dirs:   app
    default-language: GHC2021

test-suite presilk-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tst
    main-is:          Main.hs
    build-depends: base ^>=4.19.1.0
                 , presilk
                 , hspec ==2.*


